--- a/src/components/NoticesItem/NoticesItem.module.css
+++ b/src/components/NoticesItem/NoticesItem.module.css
@@ -35,6 +35,10 @@
     font-size: 16px;
     line-height: 1.25;
     color: #2b2b2a;
+    max-width: 250px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .popularity {
@@ -83,6 +87,7 @@
     font-family: "Manrope", sans-serif;
     font-weight: 500;
     font-size: 14px;
+    height: 36px;
     line-height: 1.28571;
     letter-spacing: -0.02em;
     color: #2b2b2a;
