--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -6,14 +6,37 @@
     min-height: 100vh;
 }
 
+.noticesWrapper {
+    margin-top: 85px;
+}
+
+.filters {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
 @media (min-width: 768px) {
     .container {
         padding: 32px 32px 88px;
+    }
+
+    .filters {
+        margin-top: 44px;
+        margin-bottom: 32px;
     }
 }
 
 @media (min-width: 1280px) {
     .container {
         padding: 32px 32px 80px;
+    }
+
+    .noticesWrapper {
+        margin-top: 96px;
+    }
+
+    .filters {
+        margin-top: 40px;
+        margin-bottom: 40px;
     }
 }
