--- a/src/components/MyNotices/MyNotices.module.css
+++ b/src/components/MyNotices/MyNotices.module.css
@@ -41,6 +41,14 @@
     background: #f9b020;
 }
 
+.list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    max-width: 335px;
+    margin: 0 auto;
+}
+
 .empty {
     margin: 0 auto;
     margin-top: 60px;
@@ -91,6 +99,12 @@
         line-height: 1.25;
     }
 
+    .list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        max-width: 704px;
+    }
+
     .empty {
         margin-top: 160px;
         max-width: 458px;
@@ -114,5 +128,9 @@
 
     .tabs {
         margin-top: 40px;
+    }
+
+    .list {
+        max-width: 664px;
     }
 }
