--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -2,9 +2,18 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 0 auto;
     gap: 20px;
     max-width: 335px;
+}
+
+.status {
+    font-family: "Manrope", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #262626;
 }
 
 @media (min-width: 768px) {
@@ -12,6 +21,11 @@
         flex-direction: row;
         flex-wrap: wrap;
         max-width: 704px;
+    }
+
+    .status {
+        font-size: 16px;
+        line-height: 1.25;
     }
 }
 
