--- a/src/pages/NoticesPage/NoticesPage.module.css
+++ b/src/pages/NoticesPage/NoticesPage.module.css
@@ -1,5 +1,5 @@
 .container {
-    padding: 28px 20px 80px;
+    padding: 24px 20px 88px;
     display: flex;
     flex-direction: column;
     background: #f9f9f9;
@@ -7,6 +7,7 @@
 }
 
 .noticesWrapper {
+    margin: 0 auto;
     margin-top: 85px;
 }
 
@@ -28,7 +29,7 @@
 
 @media (min-width: 1280px) {
     .container {
-        padding: 32px 32px 80px;
+        padding: 32px 64px 80px;
     }
 
     .noticesWrapper {
