--- a/src/components/ModalEditUser/ModalEditUser.module.css
+++ b/src/components/ModalEditUser/ModalEditUser.module.css
@@ -31,6 +31,11 @@
     border: none;
 }
 
+.closeIcon {
+    stroke: #262626;
+    fill: #262626;
+}
+
 .title {
     font-family: "Manrope", sans-serif;
     font-weight: 700;
