--- a/src/components/ModalNotice/ModalNotice.module.css
+++ b/src/components/ModalNotice/ModalNotice.module.css
@@ -31,6 +31,11 @@
     border: none;
 }
 
+.closeIcon {
+    stroke: #262626;
+    fill: #262626;
+}
+
 .image {
     position: relative;
     width: 120px;
