--- a/src/components/LoginBtn/LoginBtn.module.css
+++ b/src/components/LoginBtn/LoginBtn.module.css
@@ -12,7 +12,6 @@
     text-transform: uppercase;
     color: #fff;
     background: #f6b83d;
-    
 }
 
 .authPageStyle:hover {
@@ -36,6 +35,7 @@
     background: #f6b83d;
     border: 1px solid #fff;
 }
+
 .defaultStyle:hover {
     background: #f9b020;
 }
@@ -57,6 +57,27 @@
 
 .modalStyle:hover {
     background: #f9b020;
+}
+
+
+.homeHeaderStyle {
+    width: 100%;
+    font-family: "Manrope", sans-serif;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.28571;
+    letter-spacing: -0.03em;
+    text-transform: uppercase;
+    color: #fff;
+    background: #f6b83d;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+    border-radius: 30px;
+    padding: 12px 20px;
+    text-align: center;
+}
+.homeHeaderStyle:hover {
+    background: #fff4df;
+    color: #f6b83d;
 }
 
 @media (min-width: 375px) {
@@ -84,4 +105,12 @@
         font-size: 16px;
         line-height: 1.25;
     }
+
+    .homeHeaderStyle {
+        font-size: 16px;
+        line-height: 1.25;
+        padding: 15px 30px;
+        height: 50px;
+    }
 }
+
