--- a/src/components/NoticesList/NoticesList.module.css
+++ b/src/components/NoticesList/NoticesList.module.css
@@ -1,3 +1,13 @@
+.status {
+    font-family: "Manrope", sans-serif;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.28571;
+    letter-spacing: -0.03em;
+    color: #262626;
+    text-align: center;
+}
+
 .list {
     display: flex;
     flex-direction: column;
